fix: overflow

--- a/style.css
+++ b/style.css
@@ -3,6 +3,7 @@
 }
 
 body {
+  overflow-x: hidden;
   width: 100vw;
   padding: 0;
   margin: 0;
